--- a/style.css
+++ b/style.css
@@ -168,3 +168,17 @@ ul {
 .imagem-beneficios {
 	width: 50%;
 }
+
+.mapa {
+	padding: 3em 0;
+}
+
+.mapa p {
+	marging: 0 0 2em;
+	text-align:center;
+}
+
+.video {
+	width: 560px;
+	margin: 1em auto;
+}
