--- a/style.css
+++ b/style.css
@@ -190,8 +190,33 @@ td, th {
 	width: 60%;
 }
 
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios{
+	width: 40%
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens{
+	line-height: 1.5;
+}
+
+.beneficios{
+	padding: 3em 0;
+	backgroung: #888888;
+}
+
+.itens: first-child{
+	font-weight: bold;
+}
+
 .mapa {
     padding: 3em 0;
+    backgroung: linear-gradient(#FEFEFE, #888888);
 }
 
 .mapa p {
@@ -201,10 +226,5 @@ td, th {
 
 .video {
     width: 560px;
-    margin: 1em auto;
-}
-
-.conteudo-beneficios {
-	width: 640px;
-	margin: 0 auto;
+    margin: 2em auto;
 }
