--- a/style.css
+++ b/style.css
@@ -168,6 +168,13 @@ td, th {
 	clear: left;
 }
 
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
 .principal p {
 	margin: 0 0 1em;
 }
@@ -190,41 +197,52 @@ td, th {
 	width: 60%;
 }
 
-.conteudo-beneficios{
+.conteudo-beneficios {
 	width: 640px;
 	margin: 0 auto;
 }
 
-.lista-beneficios{
-	width: 40%
+.lista-beneficios {
+	width: 40%;
 	display: inline-block;
 	vertical-align: top;
 }
 
-.itens{
+.itens {
 	line-height: 1.5;
 }
 
-.beneficios{
-	padding: 3em 0;
-	backgroung: #888888;
-}
-
-.itens: first-child{
+.itens:first-child {
 	font-weight: bold;
 }
 
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
 .mapa {
-    padding: 3em 0;
-    backgroung: linear-gradient(#FEFEFE, #888888);
+	padding: 3em 0;
 }
 
 .mapa p {
-    margin: 0 0 2em;
-    text-align: center;
+	margin: 0 0 2em;
+	text-align: center;
 }
 
 .video {
-    width: 560px;
-    margin: 2em auto;
+	width: 560px;
+	margin: 2em auto;
 }
+
+* inserir entre .mapa e .mapa p
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+Mudar a ordem de todas as classes mapa deixando após a classe utensilios
+
+inverter a posição das classes benefícios e imagem-beneficios
+
+*/
